--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,12 @@
     height: 100vh;
     display: flex;
     justify-content: center;
+    background: #333;
 }
 
 .container {
     background-image: url("./images/Beer_Background.jpg");
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-size: cover;
     max-width: 700px;
