--- a/src/components/mainPage/Generator.css
+++ b/src/components/mainPage/Generator.css
@@ -1,6 +1,5 @@
 .generator {
     width: 100%;
-    margin-top: 20px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -8,4 +7,8 @@
 
 .limiter {
     width: 50px;
+}
+
+.rnd-button:hover {
+    cursor: pointer;
 }
