Added Basic Matrix Functionallity

--- a/src/components/mainPage/MainPage.css
+++ b/src/components/mainPage/MainPage.css
@@ -9,6 +9,11 @@
     overflow-x: hidden;
 }
 
+.input-matrix-wrapper {
+    height: 100%;
+    padding: 25px 5px;
+}
+
 .button-wrapper {
     display: flex;
     justify-content: space-between;
