Added Scrollable Matrix + AddUser-Routing

--- a/src/components/mainPage/InputMatrixBody.css
+++ b/src/components/mainPage/InputMatrixBody.css
@@ -1,6 +1,8 @@
 .input-matrix-body {
     display: flex;
     flex-direction: column;
+    height: 90%;
+    overflow-y: scroll;
 }
 
 .input-section {
