--- a/src/components/infoPage/ScoreBoardBody.css
+++ b/src/components/infoPage/ScoreBoardBody.css
@@ -2,7 +2,8 @@
     border-left: 1px solid #333;
     border-right: 1px solid #333;
     max-height: 45vh;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .scoreboard-row {
